# confluent-kafka-python-demo

./: README.md  pyproject.toml
src/: confluent_brokers.py  schema_registry.py  user_v1.py  user_v2.py
src/consumers/: opensearch_consumer.py
src/ksql_and_streams/: README.md
src/ksql_and_streams/ksql/: netflix.md
src/producers/: REAMME.md
src/producers/partitions/: README.md
src/producers/serializers/: README.md  avro_producer_v1.py  avro_producer_v2.py
src/producers/smart_batching/: README.md
src/security/: SUMMARY.md
